--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@7urtle/server",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "description": "Functional server",
   "main": "dist/server.min.js",
   "module": "src/index.js",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MartinGentleman/7urtle.git"
+    "url": "git+https://github.com/MeetMartin/server.git"
   },
   "keywords": [
     "JavaScript",
@@ -28,27 +28,27 @@
   "author": "Martin Novak <ragnarecek@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MartinGentleman/7urtle/issues"
+    "url": "https://github.com/MeetMartin/server/issues"
   },
-  "homepage": "https://github.com/MartinGentleman/7urtle/tree/master/packages/server",
+  "homepage": "https://github.com/MeetMartin/server",
   "devDependencies": {
-    "@7urtle/lambda": "^1.2.9",
-    "@7urtle/logger": "^1.1.0",
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-throw-expressions": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/runtime": "^7.12.5",
+    "@7urtle/lambda": "^1.2.11",
+    "@7urtle/logger": "^1.1.2",
+    "@babel/core": "^7.14.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/runtime": "^7.14.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "jest": "^26.6.3",
     "supertest": "^4.0.2",
-    "webpack": "^5.9.0",
+    "webpack": "^5.37.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "mime-types": "^2.1.24",
-    "query-string": "^6.13.7"
+    "mime-types": "^2.1.30",
+    "query-string": "^6.14.1"
   }
 }
