--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "@7urtle/server",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "Functional server",
-  "main": "dist/server.min.js",
+  "type": "module",
+  "sideEffects": false,
   "module": "src/index.js",
+  "exports": {
+    "module": "./src/index.js",
+    "import": "./src/index.js",
+    "require": "./dist/server.min.cjs",
+    "browser": "./dist/server.min.js"
+  },
+  "unpkg": "./dist/server.min.js",
+  "jsdelivr": "./dist/server.min.js",
   "files": [
     "dist/*",
     "src/*",
@@ -13,8 +22,8 @@
   "scripts": {
     "build": "webpack --progress --mode production",
     "update": "npm outdated --depth=0 | grep -v Package | awk '{print $1}' | xargs -I% npm install %@latest --save",
-    "test": "jest --silent",
-    "maintain": "npm install & npm update && npm audit fix --force && npm run build"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --silent",
+    "maintain": "npx npm-check-updates -u & npm update && npm audit fix --force && npm test && npm run build"
   },
   "repository": {
     "type": "git",
@@ -32,23 +41,24 @@
   },
   "homepage": "https://github.com/MeetMartin/server",
   "devDependencies": {
-    "@7urtle/lambda": "^1.3.7",
-    "@7urtle/logger": "^1.1.4",
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/runtime": "^7.15.3",
-    "babel-jest": "^26.6.3",
-    "babel-loader": "^8.2.2",
-    "jest": "^26.6.3",
-    "supertest": "^4.0.2",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^4.1.0"
+    "@7urtle/lambda": "^1.4.3",
+    "@7urtle/logger": "^1.1.8",
+    "@babel/core": "^7.24.5",
+    "@babel/plugin-proposal-throw-expressions": "^7.24.1",
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/runtime": "^7.24.5",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "supertest": "^7.0.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "mime-types": "^2.1.32",
-    "query-string": "^6.14.1"
+    "mime-types": "^2.1.35",
+    "query-string": "^9.0.0"
   }
 }
